# HeatBeat-Pico

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/lvgl/: CMakeLists.txt
examples/lvgl/factory/: CMakeLists.txt  factory.c
examples/lvgl/factory/font/: lv_font_montserrat_28_pl.h
examples/lvgl/factory/lvgl_ui/: CMakeLists.txt  lvgl_ui.h
examples/lvgl/factory/lvgl_ui/screen/: CMakeLists.txt  color_screen.c  color_screen.h  drawing_screen.c  drawing_screen.h  main_screen.c  main_screen.h
firmware/: CMakeLists.txt
firmware/lvgl/: CMakeLists.txt
firmware/lvgl/heatbeat/: CMakeLists.txt  bme280_port.c  main.c
firmware/lvgl/heatbeat/font/: lv_font_montserrat_28_pl.c  lv_font_montserrat_28_pl.h
firmware/lvgl/heatbeat/lvgl_ui/: CMakeLists.txt  lvgl_ui.c
firmware/lvgl/heatbeat/lvgl_ui/screen/: CMakeLists.txt  main_screen.c  main_screen.h
firmware/lvgl/heatbeat/net/: lwipopts.h
firmware/lvgl/lv_port/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_indev.c  lv_port_indev.h
libraries/bsp/: CMakeLists.txt  bsp_battery.c  bsp_battery.h  bsp_cd5300.c  bsp_co5300.h  bsp_display.h  bsp_ft6146.c  bsp_ft6146.h  bsp_i2c.c  bsp_pcf85063.c  bsp_touch.h  pio_qspi.c  pio_qspi.h  pio_qspi.pio
libraries/lvgl/: lv_conf.h
libraries/lvgl/env_support/cmake/: custom.cmake
libraries/lvgl/examples/widgets/btnmatrix/: lv_example_btnmatrix_1.c
libraries/lvgl/examples/widgets/checkbox/: lv_example_checkbox_1.c
libraries/lvgl/examples/widgets/list/: lv_example_list_1.c
libraries/lvgl/examples/widgets/msgbox/: lv_example_msgbox_1.c
libraries/lvgl/examples/widgets/switch/: lv_example_switch_1.c
libraries/lvgl/examples/widgets/textarea/: lv_example_textarea_1.c
libraries/lvgl/examples/widgets/win/: lv_example_win_1.c
